--- a/index.html
+++ b/index.html
@@ -7,166 +7,58 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Noto+Sans+Devanagari:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
   <script>
-    // Critical Shim for GitHub Pages deployment
-    // Defines the environment variable globally to prevent white-screen JS errors
-    window.process = {
-      env: {
-        API_KEY: "AIzaSyBIsIeCxlzWh3-YfS_fkemDXtxCnX6PZv8"
-      }
-    };
+    /**
+     * SECURE ENVIRONMENT SHIM
+     * Prevents "process is not defined" errors in browser.
+     * The actual API_KEY is injected via process.env by the host.
+     */
+    window.process = window.process || { env: {} };
   </script>
   <style>
     :root {
       --concor-blue: #0096D6;
-      --concor-maroon: #632421;
       --concor-bg: #F8FAFC; 
-      --concor-card: #FFFFFF;
-      --concor-border: #E2E8F0;
     }
-    html { font-size: 16px; scroll-behavior: smooth; }
     body { 
       font-family: 'Inter', sans-serif;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
       background-color: var(--concor-bg);
-      color: #0f172a;
-      overflow-x: hidden;
-      font-size: 14px;
+      margin: 0;
+      -webkit-font-smoothing: antialiased;
     }
-    .hindi-font { font-family: 'Noto Sans Devanagari', sans-serif; }
-    .mono-font { font-family: 'Roboto Mono', monospace; }
-    
-    ::-webkit-scrollbar { width: 6px; height: 6px; }
-    ::-webkit-scrollbar-track { background: transparent; }
-    ::-webkit-scrollbar-thumb { background: #CBD5E1; border-radius: 10px; }
-    ::-webkit-scrollbar-thumb:hover { background: #94A3B8; }
-
-    /* Custom AI Animations */
-    @keyframes ai-pulse-ring {
-      0% { transform: scale(0.95); opacity: 0.5; }
-      50% { transform: scale(1.1); opacity: 0.3; }
-      100% { transform: scale(1.3); opacity: 0; }
-    }
-
-    @keyframes ai-float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
-
-    @keyframes ai-shimmer {
-      0% { background-position: -200% 0; }
-      100% { background-position: 200% 0; }
-    }
-
-    @keyframes message-appear {
-      from { opacity: 0; transform: translateY(10px) scale(0.98); }
-      to { opacity: 1; transform: translateY(0) scale(1); }
-    }
-
-    .animate-ai-ring {
-      animation: ai-pulse-ring 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-    }
-
-    .animate-ai-float {
-      animation: ai-float 4s ease-in-out infinite;
-    }
-
-    .ai-shimmer-text {
-      background: linear-gradient(90deg, #fff 0%, #0096D6 50%, #fff 100%);
-      background-size: 200% auto;
-      color: transparent;
-      -webkit-background-clip: text;
-      animation: ai-shimmer 3s linear infinite;
-    }
-
-    .message-enter {
-      animation: message-appear 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
-    }
-
-    .card-standing {
-      background: white;
-      border: 1px solid #E2E8F0;
-      box-shadow: 
-        0 1px 3px 0 rgb(0 0 0 / 0.1), 
-        0 20px 25px -5px rgb(0 0 0 / 0.05);
-      transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
-    }
-
-    .form-label {
-      font-size: 10px;
-      font-weight: 900;
-      color: #94A3B8;
-      text-transform: uppercase;
-      letter-spacing: 0.15em;
-      margin-left: 1rem;
-      margin-bottom: 0.5rem;
-      display: block;
-    }
-
-    /* Precision Input Controls */
-    select, input, textarea {
-      background-color: #FFFFFF;
-      border: 1px solid #E2E8F0;
-      font-weight: 600;
-      color: #0f172a;
-      transition: all 0.3s cubic-bezier(0.16, 1, 0.3, 1);
-      border-radius: 1.25rem !important; 
-      font-size: 14px;
-      padding-left: 1.5rem !important;
-      padding-right: 1.5rem !important;
-      width: 100%;
-    }
-
-    select, input[type="text"], input[type="email"], input[type="password"] {
-      height: 3.75rem; 
-    }
-
-    input:hover, select:hover, textarea:hover {
-      border-color: #CBD5E1;
-    }
-
-    input:focus, select:focus, textarea:focus {
-      border-color: var(--concor-blue);
-      box-shadow: 0 0 0 6px rgba(0, 150, 214, 0.08);
-      outline: none;
-      transform: translateY(-1px);
-    }
-
     .btn-prominent {
       background-color: var(--concor-blue);
       color: white;
       font-weight: 800;
       text-transform: uppercase;
-      letter-spacing: 0.15em;
-      border-radius: 1.25rem;
-      transition: all 0.3s cubic-bezier(0.16, 1, 0.3, 1);
-      box-shadow: 0 10px 15px -3px rgba(0, 150, 214, 0.2);
+      letter-spacing: 0.1em;
+      border-radius: 1rem;
+      transition: all 0.2s ease;
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      height: 3.75rem;
-      padding: 0 2.5rem;
-      font-size: 13px;
+    }
+    .btn-prominent:hover {
+      transform: translateY(-1px);
+      filter: brightness(1.1);
     }
   </style>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react-dom": "https://esm.sh/react-dom@^19.2.4",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0",
+    "react": "https://esm.sh/react@^19.0.0",
+    "react-dom": "https://esm.sh/react-dom@^19.0.0",
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.1.0",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/"
   }
 }
 </script>
 </head>
 <body>
   <div id="root"></div>
-  <!-- Relative path for production compatibility -->
   <script type="module" src="./index.tsx"></script>
 </body>
 </html>
